--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-responsive": "^10.0.1",
     "react-scroll": "^1.9.3",
     "sass": "^1.95.0"
   },
