--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 BLOG_ENABLED=false
-DEPLOYMENT_URL=https://your-docusaurus-site.example.com
+DEPLOYMENT_URL=https://cyborg-s.github.io
 DEPLOYMENT_BRANCH=main
-BASE_URL=/dev-blog/
+BASE_URL=/portfolio/
 GITHUB_ORG=cyborg-s
-GITHUB_PROJECT=dev-blog
+GITHUB_PROJECT=my-dso-blog
