--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 BLOG_ENABLED=false
 DEPLOYMENT_URL=https://cyborg-s.github.io
 DEPLOYMENT_BRANCH=main
-BASE_URL=/portfolio/
+BASE_URL=/my-dso-blog/
 GITHUB_ORG=cyborg-s
 GITHUB_PROJECT=my-dso-blog
